<resources>
    <string name="app_name">LoveNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="newscenter">新闻中心</string>
    <string name="setting">设置</string>
    <string name="smartservice">智慧服务</string>
    <string name="app_namegovaffairs">政务</string>
    <string name="share">分享</string>
</resources>
